@@ -18,3 +18,6 @@ class ProductScanForm(forms.Form):
 
     num      = forms.IntegerField(min_value=1,max_value=10000,required=True)
     
+    
+
+    
